Fix releases comment entry wrapping

--- a/corehq/apps/hqwebapp/static/app_manager/scss/includes/_panel.scss
+++ b/corehq/apps/hqwebapp/static/app_manager/scss/includes/_panel.scss
@@ -102,7 +102,6 @@
     .read-write textarea {
       margin-top: 1px;
       margin-bottom: 1px;
-      width: 100%;
     }
   }
 }
